@@ -257,7 +257,7 @@
 </addon>
 <addon id="plugin.video.dmd-czech.voyo"
        name="Voyo TV Archiv"
-       version="1.6"
+       version="1.7"
        provider-name="Jiri Vyhnalek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
